# DimFort

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  tests.yml
demos/: README.md  affine.f90  broken.f90  tour.f90
demos/multifile/: README.md  constants_mod.f90  driver.f90  pressure_broken.f90  pressure_clean.f90
docs/: annotations.md  ast-only-design.md  cache-format.md  hover-ui.md  index.md  lsp.md  release-process.md  release.md  troubleshooting.md  unit-algebra.md  usage.md
docs/adoption/: permissive-lexer-template.dimfort.toml
docs/contributor/: cache-audit-0-2-6.md  cache-audit-0-2-7.md  silent-failure-audit.md
docs/design/: audit-command-future.md  content-hash-cache.md  core-architecture.md  interaction-points.md  lsp-architecture.md  markers.md  panel-info.md  rewrite-rules-future.md  scale.md  symbolic-exponents.md  symbolic-logwrap.md  unit-comment-delimiters.md  unparsed-regions.md
docs/design/contributor/: core-architecture.md  lsp-architecture.md  perf-pr-validation.md
docs/design/decisions/: canonical-form.md
docs/design/future/: audit-command.md  coverage-visualization.md  lsp-integration-tests.md  multifile-cache.md  per-variable-continuation-attach.md  perf-audit-0.2.5.md  permissive-unit-lexer.md  polymorphic-units.md  rewrite-rules.md  symbolic-exponent-annotations.md  unit-comment-skip-delimiters.md
docs/design/shipped/: content-hash-cache.md  coverage-visualization.md  markers.md  multifile-cache.md  panel-info.md  per-variable-continuation-attach.md  perf-audit-0.2.5.md  permissive-unit-lexer.md  polymorphic-units.md  scale.md  symbolic-exponent-annotations.md  symbolic-exponents.md  symbolic-logwrap.md  unit-comment-delimiters.md  unit-comment-markers.md  unparsed-regions.md
docs/editor-integration/: commands.md  hover-ui.md  lsp-protocol.md  side-panel.md
docs/quickstart/: bringing-to-existing-codebase.md  first-check.md  install.md
docs/reference/: annotations.md  cli.md  diagnostic-codes.md  dimfort-toml.md  intrinsics.md  polymorphism.md  unit-algebra.md  units-file.md  units-source-citations.md
docs/troubleshooting/: continuation-attach-migration.md  unit-comments-migration.md
scripts/: bench_multifile_cache.py  bench_scan_workspace.py  cache_memory_churn.py  capture_baseline.py  make_branding.py  profile_multifile.py  silent_failure_gate.py
src/dimfort/: __init__.py  __main__.py  cache.py  cli.py  config.py
src/dimfort/core/: __init__.py  _source_io.py  annotations.py  ast_checker.py  ast_multifile.py  attach.py  cache_key.py  cache_serde.py  cache_store.py  checker.py  coverage.py  default_units.toml  diagnostics.py  interactions.py  lfortran.py  multifile.py  multifile_cache.py  multifile_cache_persist.py  multifile_exports_cache_persist.py  parser.py  polymorphism.py  rewrite.py  symbols.py  trace.py  ts_checker.py  ts_parser.py  unit_config.py  unit_patterns.py  units.py  workspace_index.py
src/dimfort/lsp/: code_action.py  completion.py  coverage.py  decl_scan.py  definition.py  expr_tree.py  handlers.py  hover.py  hover_render.py  imports.py  inlay.py  interactions.py  markers.py  panel.py  server.py  state.py  symbols_index.py  tree_access.py  tree_nav.py  ts_helpers.py
src/dimfort/templates/: astronomy-template.dimfort.toml  biology-medicine-template.dimfort.toml  climate-template.dimfort.toml  geosciences-template.dimfort.toml  legacy-template.dimfort.toml
tests/fixtures/: hello.f90  smoke_ast_phase1.f90  smoke_ast_phase3.f90  smoke_basic.f90  smoke_check.f90  smoke_derived_types.f90  smoke_functions.f90  smoke_intrinsics.f90  smoke_rational_pow.f90  unit_algebra_cases.yaml
tests/fixtures/multifile/: geo.f90  main.f90
tests/fixtures/multifile_scope/: file_a.f90  file_b.f90
tests/integration/: test_ast_external_modules.py  test_ast_parity.py  test_ast_phase0.py  test_ast_phase1.py  test_ast_phase2.py  test_ast_phase3.py  test_ast_scope.py  test_cache_memory_churn.py  test_cli_backend.py  test_cli_check.py  test_multifile.py  test_overrides.py  test_silent_failure_cache_wrapper.py  test_smoke_basic.py  test_smoke_check.py  test_smoke_derived_types.py  test_smoke_functions.py  test_smoke_intrinsics.py  test_smoke_rational_pow.py
tests/lsp_integration/: conftest.py  test_actions_completion.py  test_coverage.py  test_diagnostics.py  test_hover.py  test_inlay_and_panel.py  test_lifecycle.py  test_workspace.py
tests/lsp_integration/fixtures/actions/: completion_site.f90  dimfort.toml  noncomment.f90  noncomment_code.f90  u002_site.f90  u005_unannotated.f90
tests/lsp_integration/fixtures/coverage/: dimfort.toml  red_codes.f90  tiers.f90  u002_rewrite.f90  u005_use_site.f90
tests/lsp_integration/fixtures/diagnostics/: bug_classes.f90  burst.f90  cache_invalidation.f90  dimfort.toml  keyword_args.f90  lhs_subscript.f90  polymorphism.f90  unit_assume.f90
tests/lsp_integration/fixtures/diagnostics_multifile/: dimfort.toml  file_a.f90  file_b.f90
tests/unit/: test_affine_conversion.py  test_annotations.py  test_assignment_homogeneity.py  test_attach.py  test_biogeochem_tag_strip.py  test_cache.py  test_cache_integration.py  test_cache_key.py  test_cache_max_entries.py  test_cache_serde.py  test_cache_store.py  test_cache_stress.py  test_checker.py  test_cli.py  test_cli_coverage.py  test_completion.py  test_config.py  test_continuation_attach.py  test_coverage.py  test_declarations.py  test_deps_consumed.py  test_exponent.py  test_exponent_widening.py  test_exports_cache_persist.py  test_format.py  test_imports_transitive.py  test_init_generator.py  test_interactions.py  test_lfortran.py  test_lsp_coverage.py  test_lsp_hover_scoping.py  test_lsp_inlay_refresh_throttle.py  test_lsp_interactions.py  test_lsp_interactions_cache.py  test_lsp_module_navigation.py  test_lsp_server.py  test_lsp_symbols_index.py  test_lsp_uri_caches.py  test_lsp_workset_cap.py  test_multifile_cache.py  (+29 more)
(+28 files in other folders)
