[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimfort"
version = "0.1.2"
description = "Dimensional homogeneity checker for Fortran projects, with LSP support."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DimFort contributors" }]
keywords = ["fortran", "static-analysis", "units", "dimensional-analysis", "lsp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-fortran>=0.6,<0.7",
]

[project.optional-dependencies]
lsp = ["pygls>=1.3"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyyaml",
]

[project.scripts]
dimfort = "dimfort.cli:main"

[project.urls]
Homepage      = "https://github.com/ArrialVictor/DimFort"
Issues        = "https://github.com/ArrialVictor/DimFort/issues"
Changelog     = "https://github.com/ArrialVictor/DimFort/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ArrialVictor/DimFort/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/dimfort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/dimfort"]
