[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimfort"
version = "0.1.2"
description = "Dimensional homogeneity checker for Fortran projects, with LSP support."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DimFort contributors" }]
keywords = ["fortran", "static-analysis", "units", "dimensional-analysis", "lsp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-fortran>=0.6,<0.7",
]

[project.optional-dependencies]
lsp = ["pygls>=1.3"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyyaml",
]

[project.scripts]
dimfort = "dimfort.cli:main"

[project.urls]
Homepage      = "https://github.com/ArrialVictor/DimFort"
Issues        = "https://github.com/ArrialVictor/DimFort/issues"
Changelog     = "https://github.com/ArrialVictor/DimFort/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ArrialVictor/DimFort/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/dimfort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/dimfort"]

# Incremental strict-typing rollout (audit item: strict mypy). The whole
# package is checked under --strict; modules not yet annotated are listed
# below with ignore_errors so the gate is green and CI-enforceable today.
# Clean a module, then delete its entry here — the list only shrinks. New
# files are checked by default (not ignored), so regressions can't sneak in.
# Cleaned so far: the entire lsp/ layer + the mechanical core/ modules +
# the unit-algebra construction model (units / unit_config).
# Remaining (their own follow-up passes): cache_serde (needs FuncSig /
# ModuleExports widened to UnitExpr — ripples into the hover renderers), the
# two big tree-walkers (ts_checker, multifile), and interactions (its last
# errors come from ts_checker's _build_ctx signature — clean together).
[[tool.mypy.overrides]]
module = [
    "dimfort.core.cache_serde",
    "dimfort.core.interactions",
    "dimfort.core.multifile",
    "dimfort.core.ts_checker",
]
ignore_errors = true
