[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimfort"
version = "0.2.4"
description = "Dimensional homogeneity checker for Fortran projects, with LSP support."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DimFort contributors" }]
keywords = ["fortran", "static-analysis", "units", "dimensional-analysis", "lsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-fortran>=0.6,<0.7",
]

[project.optional-dependencies]
lsp = ["pygls>=1.3"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyyaml",
]

[project.scripts]
dimfort = "dimfort.cli:main"

[project.urls]
Homepage      = "https://github.com/ArrialVictor/DimFort"
Issues        = "https://github.com/ArrialVictor/DimFort/issues"
Changelog     = "https://github.com/ArrialVictor/DimFort/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ArrialVictor/DimFort/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/dimfort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests: docstring rules don't carry their weight on test functions, which
# are self-documenting via descriptive names and the assertions they make.
"tests/**" = ["D"]
# Development utilities, not part of the shipped package. Exempt from the
# docstring convention so contributors aren't forced to over-document
# one-off helpers.
"scripts/**" = ["D"]
# Entry stub: re-raises SystemExit(main()) and needs no module docstring.
"src/dimfort/__main__.py" = ["D100"]
# core/__init__.py is a side-effect-import shim (populates DEFAULT_TABLE);
# lsp/__init__.py is empty (package marker only). Neither warrants a docstring.
"src/dimfort/core/__init__.py" = ["D104"]
"src/dimfort/lsp/__init__.py" = ["D104"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/dimfort"]
# The whole package is strict-clean and CI-gated — no per-module
# ignore_errors overrides remain. Keep it that way.
